--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,3 +23,6 @@
     @apply border-2 border-transparent bg-black p-3 font-dm-display text-xl text-white  hover:border-black hover:bg-white hover:text-black;
   }
 }
+.ProseMirror:focus {
+  outline: none;
+}
